fixed the sub pages

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <hr>
       <!-- my Hobbies and contact me -->
 
-      <h3> <a href="E:\Web Development Course\web sites\Web Development\Personal Website\My Hobbies.html">My Hobbies</a> </h3>
-      <h3> <a href="E:\Web Development Course\web sites\Web Development\Personal Website\Contact me.html">Contact Me</a> </h3>
+      <h3> <a href="About-me/My Hobbies.html">My Hobbies</a> </h3>
+      <h3> <a href="About-me/Contact me.html">Contact Me</a> </h3>
 
 
 
