--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="About-me/DSC_3619-modified.png" alt="Picture of Minoru Gunawaradena"></td>
+      <td><img src="DSC_3619-modified.png" alt="Picture of Minoru Gunawaradena"></td>
       <td>
         <h1>Minoru Gunawaradena</h1>
         <p><strong>Former Student At <a href="https://nalandacollege.lk"> Nalanda College </a> </strong> </p>
