--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <hr>
       <!-- my Hobbies and contact me -->
 
-      <h3> <a href="MyHobbies.html">My Hobbies</a> </h3>
-      <h3> <a href="Contactme.html">Contact Me</a> </h3>
+      <h3> <a href="hobbies.html">My Hobbies</a> </h3>
+      <h3> <a href="contactme.html">Contact Me</a> </h3>
 
 
 
